--- a/index.html
+++ b/index.html
@@ -252,10 +252,10 @@
                   <div class="photo marketer"></div>
                   <div class="team_info">
                     <div class="name">Kimberly Thompson</div>
-                    <div class="scope">Marketer</div>
+                    <div class="scope">Coder</div>
                     <div class="social_icons">
                       <div class="soc_item twitter">
-                        <i class="fab fa-twitter ">
+                        <i class="fab fa-twitter">
                           <a href="https://twitter.com/"></a>
                         </i>
                       </div>
@@ -276,11 +276,11 @@
                 <div class="team_item col_3">
                   <div class="photo coder"></div>
                   <div class="team_info">
-                    <div class="name">Rico Massimo</div>
+                    <div class="name">Tania Massimo</div>
                     <div class="scope">Coder</div>
                     <div class="social_icons">
                       <div class="soc_item twitter">
-                        <i class="fab fa-twitter "
+                        <i class="fab fa-twitter"
                           ><a href="https://twitter.com/"></a
                         ></i>
                       </div>
@@ -305,7 +305,7 @@
                     <div class="scope">Graphic Designer</div>
                     <div class="social_icons">
                       <div class="soc_item twitter">
-                        <i class="fab fa-twitter "
+                        <i class="fab fa-twitter"
                           ><a href="https://twitter.com/"></a
                         ></i>
                       </div>
@@ -334,7 +334,7 @@
             <div class="container">
               <div class="partners_block">
                 <div class="partner_item">
-                  <a href="#"><img src="images/envato.png" alt="evanto"/></a>
+                  <a href="#"><img src="images/envato.png" alt="evanto" /></a>
                 </div>
                 <div class="partner_item">
                   <a href="#"
@@ -342,7 +342,7 @@
                   /></a>
                 </div>
                 <div class="partner_item">
-                  <a href="#"><img src="images/tuts.png" alt="tuts"/></a>
+                  <a href="#"><img src="images/tuts.png" alt="tuts" /></a>
                 </div>
                 <div class="partner_item">
                   <a href="#"
@@ -407,7 +407,7 @@
           <div class="container">
             <div class="soc_links">
               <div class="soc_item twitter">
-                <i class="fab fa-twitter ">
+                <i class="fab fa-twitter">
                   <a href="https://twitter.com/"></a>
                 </i>
               </div>
