--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                   <div class="photo marketer"></div>
                   <div class="team_info">
                     <div class="name">Kimberly Thompson</div>
-                    <div class="scope">Coder</div>
+                    <div class="scope">Marketer</div>
                     <div class="social_icons">
                       <div class="soc_item twitter">
                         <i class="fab fa-twitter">
